--- a/AdventOfCode2020.Runner/AdventOfCode2020.Runner.csproj
+++ b/AdventOfCode2020.Runner/AdventOfCode2020.Runner.csproj
@@ -7,6 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="tests\**" />
+    <EmbeddedResource Remove="tests\**" />
+    <None Remove="tests\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="McMaster.Extensions.CommandLineUtils" Version="3.0.0" />
   </ItemGroup>
 
@@ -32,10 +38,6 @@
     <None Update="days\day5\testinput.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="tests\" />
   </ItemGroup>
 
 </Project>
