latest day 7 added

--- a/AdventOfCode2020.Runner/AdventOfCode2020.Runner.csproj
+++ b/AdventOfCode2020.Runner/AdventOfCode2020.Runner.csproj
@@ -38,6 +38,12 @@
     <None Update="days\day5\testinput.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="days\day7\input.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="days\day7\testinput.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
