#Day 8 part 1 solved

--- a/AdventOfCode2020.Runner/AdventOfCode2020.Runner.csproj
+++ b/AdventOfCode2020.Runner/AdventOfCode2020.Runner.csproj
@@ -44,6 +44,12 @@
     <None Update="days\day7\testinput.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="days\day8\input.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="days\day8\sampleinput.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
